--- a/app/classifica16.html
+++ b/app/classifica16.html
@@ -86,8 +86,166 @@
                 <div class="row">
                     <div class="col-md-12">
                         <h1>Classifica U16</h1>
-
-                        
+                        <div class="table-responsive">
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">Punti</th>
+                                        <th scope="col">Atleta</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr class="premio">
+                                        <td>50</td>
+                                        <td>Lorenzo Tommasini</td>
+                                    </tr>
+                                    <tr class="premio">
+                                        <td>45</td>
+                                        <td>Lorenzo Monti</td>
+                                    </tr>
+                                    <tr class="premio">
+                                        <td>45</td>
+                                        <td>Giacomo Minniti</td>
+                                    </tr>
+                                    <tr class="premio">
+                                        <td>45</td>
+                                        <td>Luca Boscherini</td>
+                                    </tr>
+                                    <tr class="premio">
+                                        <td>45</td>
+                                        <td>Lorenzo Perrone</td>
+                                    </tr>
+                                    <tr class="premio">
+                                        <td>25</td>
+                                        <td>Ivan Farabegoli</td>
+                                    </tr>
+                                    <tr class="premio">
+                                        <td>25</td>
+                                        <td>Lorenzo Foschini</td>
+                                    </tr>
+                                    <tr>
+                                        <td>24</td>
+                                        <td>Mattia Bissi</td>
+                                    </tr>
+                                    <tr>
+                                        <td>24</td>
+                                        <td>Mattia Farina</td>
+                                    </tr>
+                                    <tr>
+                                        <td>24</td>
+                                        <td>Niccolò Contu</td>
+                                    </tr>
+                                    <tr>
+                                        <td>20</td>
+                                        <td>Mattia Massaro</td>
+                                    </tr>
+                                    <tr>
+                                        <td>20</td>
+                                        <td>Matteo Accorsi</td>
+                                    </tr>
+                                    <tr>
+                                        <td>18</td>
+                                        <td>Michele Gardini</td>
+                                    </tr>
+                                    <tr>
+                                        <td>18</td>
+                                        <td>Alberto Visani</td>
+                                    </tr>
+                                    <tr>
+                                        <td>18</td>
+                                        <td>Nicolò Baldrati</td>
+                                    </tr>
+                                    <tr>
+                                        <td>15</td>
+                                        <td>Federico Rossi</td>
+                                    </tr>
+                                    <tr>
+                                        <td>15</td>
+                                        <td>Sirio Zannoni</td>
+                                    </tr>
+                                    <tr>
+                                        <td>15</td>
+                                        <td>Nicolò Zama</td>
+                                    </tr>
+                                    <tr>
+                                        <td>15</td>
+                                        <td>Giovanni Santoni</td>
+                                    </tr>
+                                    <tr>
+                                        <td>14</td>
+                                        <td>Matteo Ortelli</td>
+                                    </tr>
+                                    <tr>
+                                        <td>14</td>
+                                        <td>Diego Frascio</td>
+                                    </tr>
+                                    <tr>
+                                        <td>10</td>
+                                        <td>Federico Cottignoli</td>
+                                    </tr>
+                                    <tr>
+                                        <td>10</td>
+                                        <td>Mattia Roselli</td>
+                                    </tr>
+                                    <tr>
+                                        <td>8</td>
+                                        <td>Walter Fabbri</td>
+                                    </tr>
+                                    <tr>
+                                        <td>8</td>
+                                        <td>Gaetano Aiello</td>
+                                    </tr>
+                                    <tr>
+                                        <td>6</td>
+                                        <td>Samuele Candito</td>
+                                    </tr>
+                                    <tr>
+                                        <td>6</td>
+                                        <td>Nicola Fucksia</td>
+                                    </tr>
+                                    <tr>
+                                        <td>6</td>
+                                        <td>Lorenzo Rossetti</td>
+                                    </tr>
+                                    <tr>
+                                        <td>4</td>
+                                        <td>Filippo Capucci</td>
+                                    </tr>
+                                    <tr>
+                                        <td>4</td>
+                                        <td>Elia Cialdini</td>
+                                    </tr>
+                                    <tr>
+                                        <td>4</td>
+                                        <td>Giacomo Spaggiari</td>
+                                    </tr>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>Glenn Ferrari</td>
+                                    </tr>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>Lorenzo Preda</td>
+                                    </tr>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>Simone Fornasari</td>
+                                    </tr>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>Lorenzo Pollini</td>
+                                    </tr>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>Jacopo Bandini</td>
+                                    </tr>
+                                    <tr>
+                                        <td>1</td>
+                                        <td>Bernardo Natali</td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
