--- a/app/iscrizioni.html
+++ b/app/iscrizioni.html
@@ -304,10 +304,50 @@
                                                     <tr>
                                                         <th scope="row">1</th>
                                                         <td>86</td>
-                                                        <td>Spritzanti</td>
+                                                        <td>Spritzzanti</td>
                                                         <td>Patrick Bandini</td>
                                                         <td>Lorenzo Grottoli</td>
                                                         <td>Riccardo Cardia</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">2</th>
+                                                        <td>25</td>
+                                                        <td></td>
+                                                        <td>Dario Bezzi</td>
+                                                        <td>Massimo Piadelli</td>
+                                                        <td>Michele Zoli</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">3</th>
+                                                        <td>8</td>
+                                                        <td></td>
+                                                        <td>Lorenzo Monti</td>
+                                                        <td>Luca Poletti</td>
+                                                        <td>Mattia Orioli</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">4</th>
+                                                        <td>0</td>
+                                                        <td></td>
+                                                        <td>Stefano Rambelli</td>
+                                                        <td>Lorenzo Anconelli</td>
+                                                        <td>Andrea Cerquetti</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">5</th>
+                                                        <td>24</td>
+                                                        <td></td>
+                                                        <td>Alessandro Mancini</td>
+                                                        <td>Matteo Camerani</td>
+                                                        <td>Federico Rambaldi</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">6</th>
+                                                        <td>70</td>
+                                                        <td></td>
+                                                        <td>Matteo Bologna</td>
+                                                        <td>Filippo Sampaoli</td>
+                                                        <td>Stefano Marchini</td>
                                                     </tr>
                                                 </tbody>
                                             </table>
@@ -463,6 +503,22 @@
                                                         <td>Nicole Ventisette</td>
                                                         <td>Kathleen d'Emilio</td>
                                                         <td>Anna Battistini</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">2</th>
+                                                        <td>25</td>
+                                                        <td></td>
+                                                        <td>Michela Alfieri</td>
+                                                        <td>Silvia Battara</td>
+                                                        <td>Federica Bandini</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">3</th>
+                                                        <td>20</td>
+                                                        <td></td>
+                                                        <td>Sonia Capriglia</td>
+                                                        <td>Lisa Raimondi</td>
+                                                        <td>Eugenia Straforini</td>
                                                     </tr>
                                                 </tbody>
                                             </table>
