--- a/app/iscrizioni16.html
+++ b/app/iscrizioni16.html
@@ -218,6 +218,7 @@
                                                 <thead>
                                                     <tr>
                                                         <th scope="col">#</th>
+                                                        <th scope="col">Punti</th>
                                                         <th scope="col">Nome Squadra</th>
                                                         <th scope="col">1</th>
                                                         <th scope="col">2</th>
@@ -227,6 +228,7 @@
                                                 <tbody>
                                                     <tr>
                                                         <th scope="row">1</th>
+                                                        <td>50</td>
                                                         <td></td>
                                                         <td>Lorenzo Monti</td>
                                                         <td>Giacomo Minniti</td>
@@ -234,12 +236,68 @@
                                                     </tr>
                                                     <tr>
                                                         <th scope="row">2</th>
+                                                        <td>24</td>
                                                         <td>Gardini quello falso</td>
                                                         <td>Nicolò Baldrati</td>
                                                         <td>Michele Gardini</td>
                                                         <td>Alberto Visani</td>
                                                     </tr>
-
+                                                    <tr>
+                                                        <th scope="row">3</th>
+                                                        <td>36</td>
+                                                        <td>Shqiptari</td>
+                                                        <td>Mattia Bissi</td>
+                                                        <td>Niccolò Contu</td>
+                                                        <td>Mattia Farina</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">4</th>
+                                                        <td>20</td>
+                                                        <td>GLI</td>
+                                                        <td>Giovanni Santoni</td>
+                                                        <td>Ivan Farabegoli</td>
+                                                        <td>Lorenzo Foschini</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">5</th>
+                                                        <td>8</td>
+                                                        <td>Pdor</td>
+                                                        <td>Federico Cottignoli</td>
+                                                        <td>Mattia Roselli</td>
+                                                        <td>Lorenzo Rossetti</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">6</th>
+                                                        <td>0</td>
+                                                        <td>Gli Alfonsinesi</td>
+                                                        <td>Kevin Pretolani</td>
+                                                        <td>Nicolò Selleggini</td>
+                                                        <td>Alessandro Moscardi</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">7</th>
+                                                        <td>65</td>
+                                                        <td>Fresh 2.0</td>
+                                                        <td>Lorenzo Perrone</td>
+                                                        <td>Luca Boscherini</td>
+                                                        <td>Lorenzo Tommasini</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">8</th>
+                                                        <td>10</td>
+                                                        <td>I fenicotteri rosa</td>
+                                                        <td>Elia Cialdini</td>
+                                                        <td>Giacomo Spaggiari</td>
+                                                        <td>Matteo Ortelli</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <th scope="row">9</th>
+                                                        <td>6</td>
+                                                        <td>Mandrelli Team</td>
+                                                        <td>Walter Fabbri</td>
+                                                        <td>Gaetano Aiello</td>
+                                                        <td>Diego Frascio</td>
+                                                    </tr>
                                                 </tbody>
                                             </table>
                                         </div>
